refactor(vue-grid): use composition api + re-design (#501)
related to #487

--- a/.vuesion/storybook/preview-head.html
+++ b/.vuesion/storybook/preview-head.html
@@ -1,27 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Inter:200,400,600&display=swap" rel="stylesheet" />
 <style>
-  .props-head {
-    color: #000 !important;
-  }
-
-  pre code {
-    background: #f8f8f8 !important;
-  }
-
-  .hljs-attr {
-    color: #0c6410 !important;
-  }
-  .hljs-string,
-  .hljs-doctag {
-    color: #a11 !important;
-  }
-  .section-title {
-    margin-bottom: 32px !important;
-  }
-  .vue-info table {
-    margin-bottom: 32px !important;
-  }
-  .sb-show-main {
-    padding: 32px !important;
+  #storybook-panel-root {
+    background: #393d47 !important;
   }
 </style>
